# Scoparia

./: .gitignore  README.md  pyproject.toml
.github/workflows/: notify.yml
src/scoparia/: __init__.py  api.py  cli.py  config.py  core.py  crom.py  emailer.py  formatter.py  github_storage.py  logger.py  main.py  mongodb.py
tests/: conftest.py  test_api.py  test_config.py  test_core.py  test_crom.py  test_emailer.py  test_formatter.py  test_github_storage.py  test_mongodb.py
