[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[project]
name = "scoparia"
version = "0.0.1"
description = "SCP Forum Activity Notifier"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Crimone" }]
keywords = ["scp", "wikidot", "notification", "github-actions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp-retry>=2.9.1",
    "apprise>=1.9.5",
    "feedparser>=6.0.12",
    "msgspec[yaml]>=0.19.0",
    "pymongo>=4.15.3",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "winloop>=0.3.1; sys_platform == 'win32'",
    "html2text>=2025.4.15",
    "beautifulsoup4[lxml]>=4.14.2",
    "o365>=2.1.7",
]

[project.urls]
Documentation = "https://github.com/Crimone/Scoparia/wiki"
Homepage = "https://github.com/Crimone/Scoparia"
Repository = "https://github.com/Crimone/Scoparia"
Issues = "https://github.com/Crimone/Scoparia/issues"

[project.scripts]
scoparia = "scoparia:main"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
reportPossiblyUnboundVariable = "error"
reportUnreachable = "error"
reportInvalidCast = "error"
reportUnsafeMultipleInheritance = "error"
reportImplicitAbstractClass = "error"
reportInvalidAbstractMethod = "error"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = ["asyncio: marks tests as async (deselect with '-m \"not asyncio\"')"]
